@@ -1,6 +1,7 @@
 ======= 3.0.0
 
 - added: (IMPORTANT) Total.js components can have async delegate
+- added: new schema operations: `schema.setInsert()` and `schema.setUpdate()`
 
 ======= 2.9.3 (HOTFIX)
 
